force-app/main/default/objects/Attendance_Log__c/fields/Check_In_Geo_c__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Geo_c__c</fullName>
    <description>Check In location pin. Populated from Check In Latitude/Longitude.</description>
    <label>Check In Geo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>