force-app/main/default/objects/Attendance_Log__c/fields/Check_In_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Latitude__c</fullName>
    <description>Numeric check-in latitude copied from Event Start Location. Used by the map formula and to populate Check In Geo.</description>
    <inlineHelpText>Set by Check In. Do not edit unless correcting a location.</inlineHelpText>
    <label>Check In Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>