force-app/main/default/objects/Attendance_Log__c/fields/Check_In_Map_Url__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Map_Url__c</fullName>
    <label>Check In Map URL</label>
    <type>Url</type>
</CustomField>