force-app/main/default/objects/Attendance_Log__c/fields/Check_In_User__c.field-meta.xml
<CustomField>
    <fullName>Check_In_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who clicked Check In. Used to find the same row on Check Out.</description>
    <label>Check In User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Attendance Logs</relationshipLabel>
    <relationshipName>Attendance_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>