force-app/main/default/objects/Attendance_Log__c/fields/Check_Out_Geo__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Geo__c</fullName>
    <description>Check Out location pin. Populated from Check Out Latitude/Longitude.</description>
    <label>Check Out Geo</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>