force-app/main/default/objects/Attendance_Log__c/fields/Check_Out_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Latitude__c</fullName>
    <description>Numeric check-out latitude copied from Event End Location. Used by the map formula and to populate Check Out Geo.</description>
    <inlineHelpText>Set by Check Out. Do not edit unless correcting a location.</inlineHelpText>
    <label>Check Out Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>