force-app/main/default/objects/Attendance_Log__c/fields/Check_Out_Location__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Location__c</fullName>
    <description>Google Maps link built from Check Out Geo.</description>
    <formula>HYPERLINK("https://www.google.es/maps/dir/" &amp; IF(ISBLANK(Check_Out_Geo__Latitude__s), "0", TEXT(Check_Out_Geo__Latitude__s)) &amp; "," &amp; IF(ISBLANK(Check_Out_Geo__Longitude__s), "0", TEXT(Check_Out_Geo__Longitude__s)) &amp; "/" &amp; IF(ISBLANK(Check_Out_Geo__Latitude__s), "0", TEXT(Check_Out_Geo__Latitude__s)) &amp; "," &amp; IF(ISBLANK(Check_Out_Geo__Longitude__s), "0", TEXT(Check_Out_Geo__Longitude__s)), "Click On This URL")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out Location</label>
    <type>Text</type>
</CustomField>