force-app/main/default/objects/Attendance_Log__c/fields/Check_Out_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Longitude__c</fullName>
    <label>Check Out Longitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>