force-app/main/default/objects/Attendance_Log__c/fields/Check_Out_Map_Url__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Map_Url__c</fullName>
    <label>Check Out Map URL</label>
    <type>Url</type>
</CustomField>