force-app/main/default/objects/Attendance_Log__c/fields/Current_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Current_Coordinates__c</fullName>
    <description>JSON coordinates from the Check In or Check Out button.</description>
    <label>Current Coordinates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>