force-app/main/default/objects/Attendance_Log__c/fields/Distance_Between_Check_In_and_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Distance_Between_Check_In_and_Check_Out__c</fullName>
    <label>Distance Between Check In and Check Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>