force-app/main/default/objects/Attendance_Log__c/fields/End_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Address__c</fullName>
    <label>End Location Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>