force-app/main/default/objects/Attendance_Log__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>18-character Event Id this visit belongs to.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>