force-app/main/default/objects/Attendance_Log__c/fields/Start_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Address__c</fullName>
    <label>Start Location Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>